# psc-itmo-labs

bachelor/: .gitignore  header.aux  thesis.bib  thesis.tex
bachelor/parts/: chapter1.tex  chapter1.tex.bak  chapter2.tex  chapter3.tex  conclusion.tex  intro.tex  intro.tex.bak
bachelor/pics/: contours.eps  front_gen.asy  front_gen.eps  interpolation_sample.asy  interpolation_sample.eps  shoreline.eps  skeleton.eps  skeleton_base.asy  skeleton_base.eps  skeleton_common.asy  skeleton_interpolation.asy  skeleton_interpolation.eps
bachelor/sty/: cp1251.csf  r.bat  (+5 more)
code_theory/: running_params.h
dbms/: assignment_functions.sql  assignment_triggers.sql  comments_functions.sql  comments_triggers.sql  data0.sql  data1.sql  data2.sql  data3.sql  del_tables.sql  document_functions.sql  notes  research_functions.sql  research_triggers.sql  researches_data.sql  tables.sql  views.sql
dbms_2nd/: clear_scheme.sql  data.sql  item_management.sql  new_views.sql  scheme.sql  views.sql
information_retrieval/: report.tex
parsing/ll_parse_gen/: CMakeLists.txt  calc.hpp  common.hpp  first.hpp  follow.hpp  grammar.h  grammar.hpp  parenth.hpp  parser_gen.cpp  parser_gen.h  parser_gen.hpp  prev.hpp  rule_action.hpp  utils.hpp
sessions/: discover_listener.cpp  discover_listener.h  discover_sender.cpp  discover_sender.h  global_params.cpp  global_params.h  lowlevel.hpp  main.cpp  messenger.cpp  messenger.h  packets.hpp  session.h  session_manager.cpp  session_manager.h  session_validator.cpp  session_validator.h  sessions.pro
shalyto/: course_report.tex  multy_type.odg  sample.odg
(+60 files in other folders)
